# VideoComputePipeline

./: .gitignore  README.md  VideoComputePipeline_architecture_diagrams.md  report.md
VideoComputePipeline/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.h  error_log.txt  main.c  prompt-file.txt  report.md
VideoComputePipeline/docker/: Dockerfile.cpu  Dockerfile.cuda  README.md  compose.yaml
VideoComputePipeline/docs/: backend_runtime_implementation_plan.md
VideoComputePipeline/include/benchmark/: benchmark.h  matrix_report.h  timer.h
VideoComputePipeline/include/core/: frame.h
VideoComputePipeline/include/cpu/: cpu_filters.h
VideoComputePipeline/include/gpu/: cuda_frame.h  cuda_overlay.h  gpu_filters.h  opencl_context.h  opencl_program.h
VideoComputePipeline/include/inference/: backend_registry.h  detection_result.h  detection_writer.h  inference_engine.h  inference_types.h
VideoComputePipeline/include/pipeline/: frame_batch.h  frame_pool.h  frame_queue.h  frame_slot.h  hardware_profile.h  pipeline_config.h  pipeline_execution_plan.h  pipeline_runner.h  video_profile.h
VideoComputePipeline/include/utils/: c_runtime.h  file_utils.h  logger.h
VideoComputePipeline/include/video/: video_hw_reader.h  video_hw_writer.h  video_reader.h  video_writer.h
VideoComputePipeline/kernels/: blur13x13.cl  blur3x3.cl  blur5x5.cl  blur9x9.cl  grayscale.cl
VideoComputePipeline/scripts/: configure_cuda12.ps1  verify_cuda12_stack.ps1
VideoComputePipeline/src/benchmark/: benchmark.c  matrix_report.c  timer.c
VideoComputePipeline/src/core/: frame.c
VideoComputePipeline/src/cpu/: cpu_filters.c
VideoComputePipeline/src/gpu/: cuda_frame.c  cuda_overlay.cu  cuda_overlay_stub.c  gpu_filters.c  gpu_filters.cu  gpu_filters_disabled.c  opencl_context.c  opencl_program.c
VideoComputePipeline/src/inference/: backend_registry.c  cuda_preprocess.cu  cuda_preprocess.h  detection_result.c  detection_writer.c  inference_engine_internal.hpp  inference_engine_libtorch.cpp  inference_engine_stub.c  inference_engine_tensorrt.cpp  yolo_postprocess.cpp  yolo_postprocess.h
VideoComputePipeline/src/pipeline/: frame_batch.c  frame_pool.c  frame_queue.c  frame_slot.c  hardware_profile.c  pipeline_config.c  pipeline_execution_plan.c  pipeline_runner.c  video_profile.c
VideoComputePipeline/src/utils/: c_runtime.c  file_utils.c  logger.c
VideoComputePipeline/src/video/: video_hw_reader.cpp  video_hw_reader_stub.c  video_hw_writer.cpp  video_hw_writer_stub.c  video_reader.c  video_writer.c
VideoComputePipeline/tests/benchmark/: benchmark_test.c  matrix_report_test.c  timer_test.c
VideoComputePipeline/tests/core/: frame_test.c
VideoComputePipeline/tests/cpu/: cpu_filters_test.c
VideoComputePipeline/tests/gpu/: gpu_filters_test.c  opencl_context_test.c  opencl_program_test.c
VideoComputePipeline/tests/inference/: detection_result_test.c  detection_writer_test.c  inference_engine_test.c
VideoComputePipeline/tests/pipeline/: frame_pool_test.c  frame_queue_test.c  frame_slot_test.c  pipeline_config_test.c  pipeline_execution_plan_test.c  pipeline_runner_test.c  video_profile_test.c
VideoComputePipeline/tests/utils/: file_utils_test.c  logger_test.c
VideoComputePipeline/tests/video/: video_reader_test.c  video_writer_test.c
VideoComputePipelineUI/: .gitignore  CMakeLists.txt  README.md  imgui.ini
VideoComputePipelineUI/include/: command_builder.h  path_utils.h  pipeline_run_config.h  process_runner.h  progress_parser.h  ui_app.h
VideoComputePipelineUI/src/: command_builder.cpp  main.cpp  path_utils.cpp  process_runner_posix.cpp  process_runner_win32.cpp  progress_parser.cpp  ui_app.cpp
